--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yospos-ui-2021",
+  "name": "yospos ui 2021",
   "theme": "ui",
   "version": "0.1.0",
   "description": "New yospos-ui theme that I rewrote because yospos-ui is not working in 2022",
