--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "description": "New yospos-ui theme that I rewrote because yospos-ui is not working in 2022",
   "keywords": [
     "ui",
-    "theme"
+    "theme",
+    "yospos",
+    "yospos-ui",
+    "yospos-ui 2021"
   ],
   "repository": "https://github.com/ifelsee/yospos-ui-2021",
   "license": "MIT",
